--- a/imports/ui/components/people.jade
+++ b/imports/ui/components/people.jade
@@ -14,6 +14,8 @@ template(name="personRow")
   tr
     td #{name}
     td #{phoneNumber}
+    td
+      a(href=payPath) Pay
 
 template(name="personForm")
   form.person-form
