adding paypal api

--- a/imports/ui/pages/event-pay.jade
+++ b/imports/ui/pages/event-pay.jade
@@ -7,3 +7,6 @@ template(name="eventPay")
 
     with event
       | #{name}
+
+  #paypal-button
+  script(src="https://www.paypalobjects.com/api/checkout.js")
