tiny tweak to people table

--- a/imports/ui/components/people.jade
+++ b/imports/ui/components/people.jade
@@ -4,7 +4,7 @@ template(name="people")
       .h5 New hasher
       +personForm
 
-  table.table
+  table.table.people-table
     tr
       th name
       th
