--- a/imports/ui/components/people-table.jade
+++ b/imports/ui/components/people-table.jade
@@ -1,11 +1,11 @@
 template(name="peopleTable")
   if filterLetter
-    .h1 #{filterLetter}
+    .d-flex.justify-content-between.align-items-center.mb-2
+      .filter-letter-heading #{filterLetter}
+      div
+        button.btn.btn-outline-primary.btn-sm(onclick="javascript:history.back()") back
 
   table.table.people-table
-    tr
-      th name
-      th
     each people
       +personRow
 
@@ -14,7 +14,7 @@ template(name="personRow")
     td
       .h5
         | #{name}
-    td
+    td.text-right
       if paid
         | Paid
       else
