--- a/imports/ui/layouts/app.scss
+++ b/imports/ui/layouts/app.scss
@@ -43,11 +43,27 @@
   }
 }
 
-.person-letter {
+.filter-button-div {
+  @extend .col-3;
+
+  @extend .d-flex;
+  @extend .justify-content-center;
+
+  $margin: 8px;
+  padding-left: $margin;
+  padding-right: $margin;
+  margin-bottom: 2 * $margin;
+}
+
+.filter-button {
   @extend .btn;
   @extend .btn-outline-secondary;
-  width: 18vw;
-  height: 18vw;
+
+  @extend .p-0;
+
+  $button-size: 20vw;
+  width: $button-size;
+  height: $button-size;
 
   color: #666;
   border-color: #666;
@@ -58,12 +74,16 @@
 
   font-weight: 300;
 
-  font-size: 2.5rem;
-
-  padding-top: 0.2rem;
+  font-size: 10vw;
 
   &[disabled] {
     @extend .disabled;
     color: #CCCCCC !important;
   }
+}
+
+.filter-letter-heading {
+  @extend .h1;
+  @extend .mb-0;
+  line-height: 1;
 }
