--- a/imports/ui/pages/event.jade
+++ b/imports/ui/pages/event.jade
@@ -1,6 +1,7 @@
 template(name="event")
   with event
     .mb-4
-      h1 #{name} - $#{cashAmount}
+      h1.h5 #{name}
+      h2.h6 $#{cashAmount}
 
     +people event=this
