--- a/imports/ui/components/people-list.jade
+++ b/imports/ui/components/people-list.jade
@@ -4,24 +4,24 @@ template(name="peopleList")
       .d-flex.justify-content-between.align-items-center.mb-2
         .filter-letter-heading #{filterLetter}
         div
-          button.btn.btn-outline-primary.btn-sm(onclick="javascript:history.back()") back
+          button.people-list-back(onclick="javascript:history.back()")
+            i.fa.fa-chevron-left
+            | back
 
-  ul.people-list
+  table.people-list
     each people
       +personListItem
 
 template(name="personListItem")
-  li.person-list-item(data-friendly-id=friendlyId class=rowClass)
-    .person-list-item-name= name
-    .person-list-item-buttons
+  tr.person-list-item(data-friendly-id=friendlyId)
+    td.person-list-item-name= name
+    td.person-list-item-buttons
       if paid
-        span.cash-paid-button
-          | Paid
+        span.cash-paid-icon
+          i.fa.fa-check
       else
         if currentUser
-          span.mr-md-2
-            button(class='pay-cash-button')= payWithCashIcon
+          button(class='pay-cash-button')= payWithCashIcon
         else 
-          span.mr-md-2
-            a(href=payPath class='paypal-pay-button')
-              i.fa.fa-paypal
+          a(href=payPath class='paypal-pay-button')
+            i.fa.fa-paypal
