trying out ViewModel

--- a/imports/ui/components/people-list.jade
+++ b/imports/ui/components/people-list.jade
@@ -2,7 +2,7 @@ template(name="peopleList")
   if filterLetter
     .mb-3
       .d-flex.justify-content-between.align-items-center.mb-2
-        .filter-letter-heading #{filterLetter}
+        .filter-letter-heading #{filterLetterDisplay}
         div
           button.people-list-back(onclick="javascript:history.back()")
             i.fa.fa-chevron-left
