--- a/imports/ui/layouts/app.scss
+++ b/imports/ui/layouts/app.scss
@@ -36,7 +36,7 @@
 .pay-cash-button {
   @extend .btn;
   @extend .btn-success;
-  //@extend .btn-sm;
+  @extend .btn-sm;
   background-color: #218838;
   border-color: #218838;
 
@@ -64,7 +64,7 @@
   //padding: 0;
 
   .fa {
-    font-size: 80%;
+    font-size: 90%;
   }
 }
 
