got barebones vue working

--- a/imports/ui/pages/events.jade
+++ b/imports/ui/pages/events.jade
@@ -1,6 +1,6 @@
 template(name="events")
   .pull-right
-    {{> loginButtons align="right"}}
+    //-{{> loginButtons align="right"}}
 
   if currentUser
     +eventForm
