adding Event.startsAt field. refactoring

--- a/imports/ui/event-detail/people-list.jade
+++ b/imports/ui/event-detail/people-list.jade
@@ -17,11 +17,16 @@ template(name="personListItem")
     td.person-list-item-name= name
     td.person-list-item-buttons
       if paid
-        span.cash-paid-icon
+        span.paid-indicator
+          if paidWithCash
+            i.fa.fa-money
+          else
+            i.fa.fa-paypal
           i.fa.fa-check
       else
         if currentUser
-          button.pay-with-cash-button($b='click: payWithCash()')= payWithCashIcon
+          button.pay-with-cash-button($b='click: payWithCash()')
+            i.fa.fa-money
         else 
           a.paypal-pay-button(href=payPath)
             i.fa.fa-paypal
