--- a/imports/ui/layouts/body.jade
+++ b/imports/ui/layouts/body.jade
@@ -1,3 +1,5 @@
 template(name="App_body")
   .container.pt-3.pt-md-4
-    +Template.dynamic template=main
+    .row
+      .col-12
+        +Template.dynamic template=main
