--- a/client/app.scss
+++ b/client/app.scss
@@ -1,17 +1,9 @@
 @import "{}/node_modules/bootstrap/scss/bootstrap.scss";
 
-.event-form {
+.form {
   .input-group {
     @extend .mb-2;
   }
-
-  input {
-    @extend .form-control;
-  }
-}
-
-.person-form {
-  @extend .form-inline;
 
   input {
     @extend .form-control;
